{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 23,
  "lineage": "38b62752-0595-f60b-0675-004a7c7cea88",
  "resources": [
    {
      "module": "module.gke_cluster",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.0.1",
            "id": "projects/primal-chariot-281406/regions/us-west2/subnetworks/gke-demo-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "gke-demo-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/primal-chariot-281406/global/networks/gke-demo",
            "private_ip_google_access": false,
            "project": "primal-chariot-281406",
            "region": "us-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/16",
                "range_name": "gke-demo-ips-pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/20",
                "range_name": "gke-demo-ips-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/primal-chariot-281406/regions/us-west2/subnetworks/gke-demo-subnet"
          }
        }
      ]
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "ah"
              },
              {
                "ports": [],
                "protocol": "esp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "sctp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2021-03-31T18:10:00.280-07:00",
            "deny": [],
            "description": "Managed by terraform gke module: Allow pods to communicate with each other and the master",
            "destination_ranges": [
              "10.0.0.0/24",
              "10.1.0.0/16",
              "35.236.76.186/32"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/primal-chariot-281406/global/firewalls/gke-primal-chariot-281406-clu-intra-cluster-egress",
            "log_config": [],
            "name": "gke-primal-chariot-281406-clu-intra-cluster-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/primal-chariot-281406/global/networks/gke-demo",
            "priority": 1000,
            "project": "primal-chariot-281406",
            "self_link": "https://www.googleapis.com/compute/v1/projects/primal-chariot-281406/global/firewalls/gke-primal-chariot-281406-clu-intra-cluster-egress",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gke-primal-chariot-281406-cluster-us-west2"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.gke_cluster.google_container_cluster.primary",
            "module.gke_cluster.google_service_account.cluster_service_account",
            "module.gke_cluster.random_shuffle.available_zones",
            "module.gke_cluster.random_string.cluster_service_account_suffix",
            "module.gke_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.gke_network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-03-31T18:09:59.991-07:00",
            "deny": [],
            "description": "Managed by terraform gke module: Allow master to hit pods for admission controllers/webhooks",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/primal-chariot-281406/global/firewalls/gke-primal-chariot-281406-clu-webhooks",
            "log_config": [],
            "name": "gke-primal-chariot-281406-clu-webhooks",
            "network": "https://www.googleapis.com/compute/v1/projects/primal-chariot-281406/global/networks/gke-demo",
            "priority": 1000,
            "project": "primal-chariot-281406",
            "self_link": "https://www.googleapis.com/compute/v1/projects/primal-chariot-281406/global/firewalls/gke-primal-chariot-281406-clu-webhooks",
            "source_ranges": [
              "35.236.76.186/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gke-primal-chariot-281406-cluster-us-west2"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.gke_cluster.google_container_cluster.primary",
            "module.gke_cluster.google_service_account.cluster_service_account",
            "module.gke_cluster.random_shuffle.available_zones",
            "module.gke_cluster.random_string.cluster_service_account_suffix",
            "module.gke_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.gke_network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.gke_network.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/primal-chariot-281406/global/networks/gke-demo",
            "mtu": 0,
            "name": "gke-demo",
            "project": "primal-chariot-281406",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/primal-chariot-281406/global/networks/gke-demo"
          }
        }
      ]
    },
    {
      "module": "module.gke_network.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gke_network.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "us-west2/gke-demo-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-03-31T18:03:12.738-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/primal-chariot-281406/regions/us-west2/subnetworks/gke-demo-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "gke-demo-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/primal-chariot-281406/global/networks/gke-demo",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "primal-chariot-281406",
            "region": "us-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/16",
                "range_name": "gke-demo-ips-pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/20",
                "range_name": "gke-demo-ips-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/primal-chariot-281406/regions/us-west2/subnetworks/gke-demo-subnet"
          },
          "dependencies": [
            "module.gke_network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "gke-demo",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "gke-demo",
            "metadata": [
              {
                "generation": 0,
                "name": "gke-demo",
                "resource_version": "3843",
                "self_link": "/api/v1/namespaces/gke-demo",
                "uid": "e69296e6-097c-407e-b550-8d4afcb9fef8"
              }
            ]
          },
          "dependencies": [
            "module.gke_cluster.google_container_cluster.primary",
            "module.gke_cluster.google_container_node_pool.pools",
            "module.gke_cluster.google_service_account.cluster_service_account",
            "module.gke_cluster.module.gcloud_wait_for_cluster.null_resource.additional_components",
            "module.gke_cluster.module.gcloud_wait_for_cluster.null_resource.gcloud_auth_google_credentials",
            "module.gke_cluster.module.gcloud_wait_for_cluster.null_resource.gcloud_auth_service_account_key_file",
            "module.gke_cluster.module.gcloud_wait_for_cluster.null_resource.run_command",
            "module.gke_cluster.random_shuffle.available_zones",
            "module.gke_cluster.random_string.cluster_service_account_suffix",
            "module.gke_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.gke_network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app-deploy-service",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "gke-demo/app-deploy-service",
            "load_balancer_ingress": [
              {
                "ip": "34.94.209.225"
              }
            ],
            "metadata": [
              {
                "generation": 0,
                "name": "app-deploy-service",
                "namespace": "gke-demo",
                "resource_version": "5039",
                "self_link": "/api/v1/namespaces/gke-demo/services/app-deploy-service",
                "uid": "96f84023-937f-4132-8d3c-353e46c6511c"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.2.13.254",
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 32673,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "app-deploy-demo"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ]
          },
          "dependencies": [
            "kubernetes_deployment.app-deploy-demo",
            "kubernetes_namespace.gke-demo",
            "module.gke_cluster.google_container_cluster.primary",
            "module.gke_cluster.google_container_node_pool.pools",
            "module.gke_cluster.google_service_account.cluster_service_account",
            "module.gke_cluster.module.gcloud_wait_for_cluster.null_resource.additional_components",
            "module.gke_cluster.module.gcloud_wait_for_cluster.null_resource.gcloud_auth_google_credentials",
            "module.gke_cluster.module.gcloud_wait_for_cluster.null_resource.gcloud_auth_service_account_key_file",
            "module.gke_cluster.module.gcloud_wait_for_cluster.null_resource.run_command",
            "module.gke_cluster.random_shuffle.available_zones",
            "module.gke_cluster.random_string.cluster_service_account_suffix",
            "module.gke_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.gke_network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}